[tool.poetry]
name = "lstnet-tensorflow"
version = "0.1.0"
description = "Tensorflow implementation of lstnet"
authors = ["Flavia Giammarino"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = ">=1.5.2"
numpy = ">=1.23.5"
tensorflow = ">=2.10.0"
plotly = ">=5.11.0"
kaleido = ">=0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
